# authCSHER

./: LICENSE.txt  README.md
protocol-for-AWS/: .gitignore  CMakeLists.txt  Constants.h  Dockerfile  K_MAC.cpp  K_MAC.h  MAC.cpp  MAC.h  README.md  Secret_Sharing.cpp  Secret_Sharing.h  Servers_Protocol.cpp  Servers_Protocol.h  Tests.cpp  Tests.h  Utility.cpp  Utility.h  authCSHER.cbp  datapoints  seal_installer.sh
protocol-for-AWS/Auxiliary_Server/: Auxiliary_Server.cpp  Auxiliary_Server.h  main.cpp
protocol-for-AWS/Data_Owner/: Data_Owner.cpp  Data_Owner.h  main.cpp
protocol-for-AWS/Destination_Server/: DS_Performance_metrics.h  Destination_Server.cpp  Destination_Server.h  main.cpp
protocol-for-AWS/Test_Protocol/: Test_Protocol.cpp  Test_Protocol.h  main.cpp
protocol-for-AWS/test_enc_params/: params_20bp_16k_minimal
